companyweb/force-app/main/default/objects/Lead/fields/CW_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>CW_Abbreviation__c</fullName>
    <description>LegalForm.Abbreviation</description>
    <label>Abbreviation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>