companyweb/force-app/main/default/objects/Lead/fields/CW_Activities__c.field-meta.xml
<CustomField>
    <fullName>CW_Activities__c</fullName>
    <label>Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>