companyweb/force-app/main/default/objects/Lead/fields/CW_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>CW_Address_Line_2__c</fullName>
    <description>Address.Line2</description>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>