companyweb/force-app/main/default/objects/Lead/fields/CW_Avoid_Callout__c.field-meta.xml
<CustomField>
    <fullName>CW_Avoid_Callout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be used to avoid the CompanyWeb callout when importing Leads (if checked, import will not do the callout)</description>
    <label>Avoid Callout</label>
    <type>Checkbox</type>
</CustomField>