companyweb/force-app/main/default/objects/Lead/fields/CW_Balance__c.field-meta.xml
<CustomField>
    <fullName>CW_Balance__c</fullName>
    <description>Balances.BookYear</description>
    <label>Financial Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>