companyweb/force-app/main/default/objects/Lead/fields/CW_Company_Status__c.field-meta.xml
<CustomField>
    <fullName>CW_Company_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>