companyweb/force-app/main/default/objects/Lead/fields/CW_Country__c.field-meta.xml
<CustomField>
    <fullName>CW_Country__c</fullName>
    <description>Address.CountryCode</description>
    <label>Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>