companyweb/force-app/main/default/objects/Lead/fields/CW_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>CW_Credit_Limit__c</fullName>
    <description>CreditLimit.Limit</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>