companyweb/force-app/main/default/objects/Lead/fields/CW_Credit_Limit_Formula__c.field-meta.xml
<CustomField>
    <fullName>CW_Credit_Limit_Formula__c</fullName>
    <formula>&apos;€&apos; &amp; TEXT(CW_Credit_Limit__c) &amp; BR() &amp; 
	 CW_Credit_Limit_Reason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit</label>
    <type>Text</type>
</CustomField>