companyweb/force-app/main/default/objects/Lead/fields/CW_Equity__c.field-meta.xml
<CustomField>
    <fullName>CW_Equity__c</fullName>
    <description>Balances.Rub10_15</description>
    <label>Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>