companyweb/force-app/main/default/objects/Lead/fields/CW_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>CW_Gross_Margin__c</fullName>
    <description>Balances.Rub9800</description>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>