companyweb/force-app/main/default/objects/Lead/fields/CW_In_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>CW_In_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Follow Up</label>
    <type>Checkbox</type>
</CustomField>