companyweb/force-app/main/default/objects/Lead/fields/CW_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>CW_Last_Sync__c</fullName>
    <description>Field to save the last sync date</description>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>