companyweb/force-app/main/default/objects/Lead/fields/CW_Name__c.field-meta.xml
<CustomField>
    <fullName>CW_Name__c</fullName>
    <description>CompanyName</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>