companyweb/force-app/main/default/objects/Lead/fields/CW_Phone__c.field-meta.xml
<CustomField>
    <fullName>CW_Phone__c</fullName>
    <description>TelephoneNumber</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>