companyweb/force-app/main/default/objects/Lead/fields/CW_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>CW_PostalCode__c</fullName>
    <description>Address.PostalCode</description>
    <label>PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>