companyweb/force-app/main/default/objects/Lead/fields/CW_Result__c.field-meta.xml
<CustomField>
    <fullName>CW_Result__c</fullName>
    <description>Balances.Rub9904</description>
    <label>Profit/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>