companyweb/force-app/main/default/objects/Lead/fields/CW_Score__c.field-meta.xml
<CustomField>
    <fullName>CW_Score__c</fullName>
    <description>Score.ScoreAsDecimal</description>
    <label>Score</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>